# rms

./: .gitignore  Cargo.toml  Makefile  README.md  Rocket.toml  docker-compose-8.yml  docker-compose.yml  sqlx-data.json
migrations/2021-12-25-123545_create_posts_table/: down.sql  up.sql
src/: diesel_sqlite.rs  main.rs  rusqlite.rs  schema.rs  sqlx.rs  tests.rs
