[package]
name = "tls"
version = "0.0.0"

edition = "2018"
publish = false

[dependencies]


rocket = { git = "https://github.com/SergioBenitez/Rocket", rev = "8cae077", features = ["secrets", "tls", "json"] }
rocket_sync_db_pools = { git = "https://github.com/SergioBenitez/Rocket", rev = "8cae077", features = ["sqlite_pool", "postgres_pool", "diesel_sqlite_pool"] }
rocket_db_pools = { git = "https://github.com/SergioBenitez/Rocket", rev = "8cae077", features = ["sqlx_sqlite"] }


diesel = { version = "1.3", features = ["sqlite", "postgres", "r2d2"] }
diesel_migrations = "1.3"
sqlx = { version = "0.5.1", default-features = false, features = ["macros", "offline", "migrate"] }

reqwest = "0.9.2"
oauth2 = "2.0.0"
failure = "0.1"
url = "1.0"
log = "0.4"
semver = "1"
lazy_static = "1"
blake2 = "0.8.0"
hex = "0.4"
maplit = "1.0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
#syntect = "3.3"

dotenv = "0.15"
env_logger = "0.9"
structopt = "0.3.21"


#rocket_db_pools = { version = "0.1.0-rc", features = ["sqlx_sqlite"] }